# dealii

./: .clang-format  .clang-tidy  .codecov.yml  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  .typos.toml  A sample code of advection-diffusion equation  AUTHORS  AUTHORS.md  CHANGELOG.md  CITATION.cff  CITATIONS.bib  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Jenkinsfile  LICENSE  LICENSE.md  README.md  SUPPORT.md  VERSION  output
bundled/: .clang-tidy  CMakeLists.txt  README.bundled  README.md  setup_bundled.cmake
bundled/kokkos-3.7.00/: CMakeLists.txt
bundled/kokkos-4.5.01/: CMakeLists.txt
bundled/mesquite-2.99/: CMakeLists.txt  configure.ac  lgpl.txt
bundled/muparser_v2_2_3/: CMakeLists.txt
bundled/muparser_v2_2_4/: CMakeLists.txt  Changes.txt
bundled/muparser_v2_3_3/: CHANGELOG  CMakeLists.txt
cmake/config/: CMakeLists.txt  Config.cmake.in  ConfigGit.cmake.in  ConfigVersion.cmake.in  Make.global_options.in  config_base.pc.in  config_debug.pc.in  config_release.pc.in  deal.II_base.pc.in  deal.II_debug.pc.in  deal.II_release.pc.in  template-arguments.in
cmake/scripts/: CMakeLists.txt  expand_instantiations.cc  get_closest_tag.sh  get_fancy_tag.sh  get_latest_tag.sh  make_dependencies.cc  normalize.pl  run_test.cmake  run_test.sh  run_testsuite.cmake
contrib/: .clang-format  CMakeLists.txt  README.contrib  README.md
contrib/ci/: Jenkinsfile.ampere  Jenkinsfile.cuda  Jenkinsfile.mark  Jenkinsfile.mpi  Jenkinsfile.osx  Jenkinsfile.serial  Jenkinsfile.tidy  appveyor.yml  make-docker-arm-build.sh
contrib/docker/: Dockerfile  Dockerfile.root
contrib/git-hooks/: pre-commit
contrib/mesh_conversion/: CMakeLists.txt  Main.cc  MeshConversion.cc  README.txt
contrib/parameter_gui/: CMakeLists.txt  README  browse_lineedit.cpp  browse_lineedit.h  info_message.cpp  info_message.h  main.cpp  mainwindow.cpp  mainwindow.h  parameter_delegate.cpp  parameter_delegate.h  parameters.xml  xml_parameter_reader.cpp  xml_parameter_reader.h  xml_parameter_writer.cpp  xml_parameter_writer.h
contrib/python-bindings/: CMakeLists.txt
contrib/styles/: README.md  astyle.rc  eclipse-dealii-code-format.xml  qtcreator-dealii-code-format.xml  qtcreator-prm-format.xml
contrib/utilities/: CMakeLists.txt  astyle.rc  authors_per_year.py  build_primary_interface_unit.py  check_doxygen.sh  check_encoding.py  check_indentation.sh  checkdoxygen.py  compile_clang_format  convert_header_file_to_interface_module_unit.py  convert_source_file_to_implementation_module_unit.py  convert_to_module_units_common.py  count_lines.sh  detect_include_cycles.py  detect_merges_from_master_in_feature_branch.sh  detect_merges_in_feature_branch.sh  detect_module_cycles.py  dotgdbinit.py  double_word_typos.py  download_clang_format  download_codecov  download_codecov_bash.sh  embedding.cc  fe_table.pl  find_header_dependencies.py  find_module_partition_dependencies.py  generate_lapack_templates  gridio.cc  indent  indent-all  indent-branch  indent.py  indent_common.sh  interpolation.cc  lagrange_basis  lapack_templates.pl  lapack_templates_custom_target.cmake  lowercase_cmake  makeofflinedoc.sh  parse.py  (+13 more)
cpack/: CMakeLists.txt
cpack/mac-bundle/: Info.plist  dealii-terminal  dealii.conf  dealii.location  mac_startup_script.sh
deal.II/: CMAKE-TODO  CMake-Regressions  CMakeLists.txt  CTestConfig.cmake  GNUmakefile  LICENSE  Makefile  README  README.CMAKE  README.configure  README_CMAKE  TODO.CMAKE  TODO_CMAKE  VERSION  Version  acconfig.h  aclocal.m4  bugs.m4  cmake-TODO  compiler-mumbo-jumbo.m4  compiler.m4  config.guess  config.h.in.old  config.sub  configure  configure.in  features.m4  files  reconfigure  run_testsuite.cmake  threads.m4  todo  unused-definitions
deal.II/base/: Make_dep.pl  Makefile  Todo
deal.II/bundled/: CMakeLists.txt  README.bundled  setup_bundled.cmake
deal.II/cmake/: README.cmake  TODO.CMAKE  bugs.m4  compiler.m4  features.m4  petsc.m4  setup_cached_variables.cmake  setup_compiler_flags.cmake  setup_compiler_flags_gnu.cmake  setup_compiler_flags_intel.cmake  setup_compiler_flags_msvc.cmake  setup_cpack.cmake  setup_custom_targets.cmake  setup_deal_ii.cmake  setup_external_macros.cmake  setup_finalize.cmake  setup_post_project_call.cmake  setup_sanity_checks.cmake  setup_testsubproject.cmake  setup_testsuite.cmake  setup_write_config.cmake
deal.II/common/: CMakeLists.txt  CodingConventions  Make.global_options  Make.global_options.in  Make.rules  Makefile  Makefile.template  Makefile.template.in  README  astyle.rc  dealiitemplates.pm.in  template-arguments  template-arguments.in
deal.II/config/: CMakeLists.txt  Config.cmake.in  Make.global_options.in  Make.global_options.stub  deal.IIConfig.cmake.in  deal.IIConfigVersion.cmake.in  distclean.cmake.in  setup_make.global_options.cmake  setup_template-arguments.in.cmake
deal.II/contrib/: CMakeLists.txt  Makefile.in  README.contrib  configure  configure.in
deal.II/deal.II/: Conventions  Make.global_options  (+6 more)
doc/: .clang-format  CMakeLists.txt  README.doc  README.md  authors.html  documentation.html  index.html  license.html  mail.html  navbar.html  readme.html  screen.css  title.html.in
examples/: .clang-format  CMakeLists.txt  README.example  README.md
include/: CMakeLists.txt
module/: CMakeLists.txt
source/: CMakeLists.txt  dummy.cc
tests/: CMakeLists.txt  Makefile  Makefile.headers  Makefile.in  Makefile.paths.in  Makefile.rules  README  README.md  TODO  abort.cc  configure  configure.in  dof_tools_frame.h  function_cutoff_01.cc  function_cutoff_01.output  grid_generator_from_name_and_argument_01.cc  grid_generator_from_name_and_argument_01.output  hierarchy.pl  macro_add_test.cmake  macro_pickup_tests.cmake  manage_testsuite.sh  newplatform.csh  normalize.pl  report-regression-tests.pl  report.pl  run_buildtest.cmake  run_coverage.cmake  run_memorycheck.cmake  run_performance_tests.cmake  run_quick_tests.cmake  run_testsuite.cmake  setup_testsubproject.cmake  status_to_report.pl  submit_results.cmake  test_grids.h  testmatrix.h  tests.h  try_replace.sh
(+28517 files in other folders)
